<resources>
    <string name="app_name">inscriptionExamens</string>
    <string name="mainTitle">Veuillez vous connecter</string>

    <string name="inscription">Inscription</string>
    <string name="desinscription">Désinscription</string>

    <string name="bConnect">Se connecter</string>
    <string name="bInscription">S\'inscrire</string>
    <string name="bDesinscription">Se désinscrire</string>
    <string name="bAjouterExamen">Ajouter un examen</string>
    <string name="bListerExamens">Lister les examens</string>
    <string name="bSupprimer">Supprimer</string>
    <string name="bListeEtudiants">Liste d\'étudiants</string>
    <string name="bValider">Valider</string>
    <string name="bModifier">Modifier</string>

    <string name="iMatricule">Matricule</string>
    <string name="iPassword">Mot de passe</string>

    <string name="oMenu">Menu</string>
    <string name="oListeExamens">Liste des examens</string>
    <string name="oChoixAnneTitle">Choisissez les années qui vous intéressent</string>
    <string name="oListeExamPassees">Lister les examens passés</string>

    <string name="foo">PLACE_HOLDER</string>
    <string name="notifications">Notifications</string>
</resources>
