<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="449dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="173dp">

        <TextView
            android:id="@+id/titreConnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainTitle"
            android:textSize="26sp"
            android:gravity="center"
        />

        <EditText
            android:id="@+id/iMatricule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/iMatricule" />

        <EditText
            android:id="@+id/iPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/iPassword" />

        <Button
            android:id="@+id/bConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bConnect" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>