<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/elExam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/oNomCours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foo" />

            <TextView
                android:id="@+id/oTypeExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foo" />

            <TextView
                android:id="@+id/oDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foo" />

            <TextView
                android:id="@+id/oDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foo" />

            <TextView
                android:id="@+id/oDuree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bListeEtudiants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bListeEtudiants" />

            <Button
                android:id="@+id/bModifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bModifier" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>